# trix

./: .rustfmt.toml  Cargo.toml  build.rs
src/: eval.rs  expr.rs  expr_parser.lalrpop  lexer.rs  lib.rs  nix_lexer.l  parser.rs
src/lang-tests/: eval-okay-attrs5.nix
