[package]
name = "trix"
version = "0.1.0"
authors = ["Tom Hunger <tehunger@gmail.com>"]
edition = "2018"
build = "build.rs"

[profile.release]
debug = true

[dependencies]
gc-arena = "0.2.0"
lalrpop-util = "0.17.2"

[build-dependencies]
rflex = "0.6.0"
lalrpop = "0.17.2"

[dev-dependencies]
proptest = "0.9.5"
glob = "0.3.0"

